CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( test_productivity )

SET(CMAKE_CXX_STANDARD 17)
if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    # for Clang and AppleClang
    set( CMAKE_CXX_FLAGS "-Ofast" )
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    # for GCC
    set( CMAKE_CXX_FLAGS "-O3 -Wall -Wextra" )
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
    # for Intel ++
    set( CMAKE_CXX_FLAGS "-fast" )
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    # for MSVC
    set( CMAKE_CXX_FLAGS "-O2" )
endif()

FIND_PACKAGE(  Boost 1.65 COMPONENTS REQUIRED)
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

ADD_EXECUTABLE( test test.cpp )

TARGET_LINK_LIBRARIES( test LINK_PUBLIC ${Boost_LIBRARIES} )
